--- a/Report.tex
+++ b/Report.tex
@@ -117,6 +117,7 @@ To add the force of gravitational attraction to the game, I added a special miss
 \centering
 \includegraphics[width=1\textwidth]{imgs/Blackhole.png}
 \end{figure}
+\noindent
 The black holes only last for a short while before disappearing. This means that if a meteor was being accelerated towards it but did not get sucked in, it will no longer have a force applied to it, but it will retain its fast velocity, only being slowed by drag. This makes the use of black holes more strategic and a double edged sword if used improperly as the disappearing of one at the wrong time could cause a meteor to crash down really fast onto a city. Because of this danger, the black hole missiles will not create a black hole on impact, only when they reach their destination. Use right click instead of left click to shoot out a missile that creates a black hole.
  
 \subsubsection*{Forcefield}
@@ -140,7 +141,9 @@ To allow the player the ability to use more of these special particles, I have a
 
 \subsection{Scoring system}
 There are two components to the scoring system: during the wave and at the end of the wave. \n
-During the wave, if a meteor hits the ground and explodes, it adds a bit of score. If the meteor is instead knocked away outside of the screen, more score is added. By having meteors give score regardless, it allows players who are not very skilled to still get score that they can use in the shop. 
+During the wave, if a meteor hits the ground and explodes, it adds a bit of score. If the meteor is instead knocked away outside of the screen, more score is added. By having meteors give score regardless, it allows players who are not very skilled to still get score that they can use in the shop.
+\n
+At the end of every wave, the number of remaining cities and missiles are counted up and added to the player's score. This is the same as in the original \textit{Missile Command} game and rewards skilled players as they were able to keep more cities alive and also use their missiles strategically enough to still have some remaining at the end of the round. 
 \subsection{Increasing difficulty}
 There are multiple things that I've done to increase the difficulty of the game. 
 \begin{itemize}
